--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: Generate List of Configs to Merge
           command: |
             # Generate a list of all the circleci configs we want to run
-            file_list=(".circleci/shared.yml" ".circleci/monorepo-jobs.yml" ".circleci/prospect-api.yml" ".circleci/curated-corpus-api.yml" ".circleci/corpus-scheduler-lambda.yml")       
+            file_list=(".circleci/shared.yml" ".circleci/monorepo-jobs.yml" ".circleci/prospect-api.yml" ".circleci/curated-corpus-api.yml" ".circleci/corpus-scheduler-lambda.yml" ".circleci/collection-api.yml")       
             touch /tmp/configs.txt
 
             # Add file header to each file and dump it to the config list
@@ -47,6 +47,7 @@ jobs:
           mapping: |
             ((servers|infrastructure|lambdas)/prospect-api/.*)|(packages/.*)|(pnpm-lock\.yaml)|(Dockerfile) prospect_api true
             ((servers|infrastructure)/curated-corpus-api/.*)|(packages/.*)|(pnpm-lock\.yaml)|(Dockerfile) curated_corpus_api true
+            ((servers|infrastructure)/collection-api/.*)|(packages/.*)|(pnpm-lock\.yaml)|(Dockerfile) collection_api true
             ((lambdas|infrastructure)/corpus-scheduler-lambda/.*)|(packages/.*)|(pnpm-lock\.yaml) corpus_scheduler_lambda true
       - continuation/continue:
           configuration_path: /tmp/generated-config.yml
