--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -17,6 +17,7 @@ repo_for_enum: &repo_for_enum
     enum:
       - prospect_api
       - curated_corpus_api
+      - collection_api
       - corpus_scheduler_lambda
 
 resource_class_enum: &resource_class_enum
@@ -33,6 +34,9 @@ parameters:
     type: boolean
     default: false
   curated_corpus_api:
+    type: boolean
+    default: false
+  collection_api:
     type: boolean
     default: false
   corpus_scheduler_lambda:
@@ -61,6 +65,7 @@ commands:
           environment:
             prospect_api: << pipeline.parameters.prospect_api >>
             curated_corpus_api: << pipeline.parameters.curated_corpus_api >>
+            collection_api: << pipeline.parameters.collection_api >>
             corpus_scheduler_lambda: << pipeline.parameters.corpus_scheduler_lambda >>
   install_pnpm:
     steps:
