--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -79,27 +79,17 @@ commands:
           command: |
             pnpm install
   generate_prisma_client:
-    parameters:
-      scope:
-        description: The pnpm scope to build for
-        type: string
-        default: ""
     steps:
       - run:
           name: Generate prisma client
-          command: pnpm run --filter=<< parameters.scope >> db:generate-prisma-client
+          command: pnpm run db:generate-prisma-client
   apply_prisma_migration:
-    parameters:
-      scope:
-        description: The pnpm scope to build for
-        type: string
-        default: ""
     steps:
       - run:
           name: Apply prisma migration
           command: |
             export $(egrep -v '^#' .docker/local.env | xargs -0)
-            pnpm run --filter=<< parameters.scope >> migrate:prisma-reset
+            pnpm migrate:prisma-reset
   install_infrastructure_pnpm:
     steps:
       - run:
@@ -417,8 +407,18 @@ jobs:
           condition:
             equal: [ true, << parameters.run_prisma_jobs >> ]
           steps:
-            - generate_prisma_client
-            - apply_prisma_migration
+            - run:
+                name: generate prisma client
+                command: pnpm run --filter=<< parameters.scope >> db:generate-prisma-client
+            - run:
+                name: apply prisma migration
+                command: |
+                  export $(egrep -v '^#' .docker/local.env | xargs -0)
+                  pnpm run --filter=<< parameters.scope >> migrate:prisma-reset
+
+#          steps:
+#            - generate_prisma_client
+#            - apply_prisma_migration
       - run:
           name: run setup.sh
           command: |
