--- a/.circleci/monorepo-jobs.yml
+++ b/.circleci/monorepo-jobs.yml
@@ -6,13 +6,26 @@ jobs:
     steps:
       - checkout
       - install_pnpm
+      # TODO: can we make this a pre-build step?
       - generate_prisma_client
       - run:
           name: Lint
           # Need to build first, so the linter picks up all needed imports
           command: |
             pnpm run build
-            pnpm run lint --concurrency=2
+            pnpm run lint
+
+  # checks for mismatched npm package versions
+  mismatched_versions:
+    docker:
+      - image: *node_image
+    steps:
+      - checkout
+      - install_pnpm
+      - run:
+          name: Check for Mismatch
+          command: |
+            pnpm list-mismatches
 
   test:
     docker:
@@ -24,7 +37,7 @@ jobs:
       - run:
           name: Test
           command: |
-            pnpm run test --concurrency=2
+            pnpm run test
 
 workflows:
   monorepo:
@@ -33,5 +46,8 @@ workflows:
           <<: *not_dev_main
           context: pocket
       - test:
+          <<: *not_dev_main
+          context: pocket
+      - mismatched_versions:
           <<: *not_dev_main
           context: pocket
