--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@aws-sdk/client-secrets-manager": "3.529.1",
     "@types/aws-lambda": "8.10.134",
+    "@types/luxon": "3.4.2",
     "@types/jest": "29.5.12",
     "aws-sdk-client-mock": "^3.0.1",
     "eslint-config-custom": "workspace:*",
