--- a/servers/collection-api/package.json
+++ b/servers/collection-api/package.json
@@ -26,11 +26,11 @@
   },
   "dependencies": {
     "@apollo/server-plugin-response-cache": "4.1.3",
-    "@aws-sdk/client-eventbridge": "^3.276.0",
-    "@aws-sdk/client-s3": "3.388.0",
-    "@aws-sdk/lib-storage": "3.388.0",
+    "@aws-sdk/client-eventbridge": "3.529.1",
+    "@aws-sdk/client-s3": "3.529.1",
+    "@aws-sdk/lib-storage": "3.529.1",
     "@pocket-tools/apollo-utils": "3.4.2",
-    "@pocket-tools/ts-logger": "^1.2.4",
+    "@pocket-tools/ts-logger": "^1.3.0",
     "@prisma/client": "^5.0.0",
     "@sentry/node": "7.62.0",
     "@sentry/tracing": "7.62.0",
@@ -41,27 +41,27 @@
     "graphql-tag": "2.12.6",
     "graphql-upload": "15.0.2",
     "slugify": "1.6.6",
-    "uuid": "9.0.0"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "tsconfig": "workspace:*",
     "eslint-config-custom": "workspace:*",
-    "@faker-js/faker": "8.0.2",
+    "@faker-js/faker": "8.4.1",
     "@types/chai": "4.3.5",
-    "@types/jest": "29.5.3",
+    "@types/jest": "29.5.12",
     "@types/graphql-upload": "8.0.12",
-    "@types/node": "20.11",
+    "@types/node": "^20.11.6",
     "@types/sinon": "^10.0.13",
     "@types/supertest": "^2.0.12",
     "chai": "4.3.7",
     "dotenv": "16.3.1",
     "husky": "8.0.3",
-    "jest": "29.6.2",
-    "nock": "13.3.2",
-    "nodemon": "2.0.22",
+    "jest": "29.7.0",
+    "nock": "13.5.1",
+    "nodemon": "3.0.1",
     "prisma": "^5.0.0",
     "sinon": "^15.0.1",
-    "supertest": "6.3.3",
-    "ts-jest": "29.1.1"
+    "supertest": "6.3.4",
+    "ts-jest": "29.1.2"
   }
 }
