--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -32,16 +32,15 @@
     "@aws-sdk/client-s3": "3.529.1",
     "@aws-sdk/lib-storage": "3.529.1",
     "@devoxa/prisma-relay-cursor-connection": "3.1.0",
-    "@pocket-tools/apollo-utils": "3.3.4",
+    "@pocket-tools/apollo-utils": "3.4.2",
     "@pocket-tools/ts-logger": "^1.3.0",
     "@prisma/client": "^5.0.0",
-    "@sentry/node": "7.49.0",
-    "@sentry/tracing": "7.49.0",
+    "@sentry/node": "7.62.0",
+    "@sentry/tracing": "7.62.0",
     "@snowplow/node-tracker": "3.5.0",
-    "@types/luxon": "3.4.2",
     "content-common": "workspace:*",
     "cors": "2.8.5",
-    "dataloader": "2.2.2",
+    "dataloader": "^2.2.2",
     "date-fns": "2.29.3",
     "express": "4.18.2",
     "graphql-scalars": "1.22.4",
