feat: create unique ids on scheduled item actions to support analytics
- deletes and inserts on a reschedule (except same day reschedules)
- creates an ephemeral new externalId when deleting
- begin refactor of graph integration tests (splitting into separate files)

--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -46,7 +46,8 @@
     "graphql-scalars": "1.22.4",
     "graphql-upload": "15.0.2",
     "luxon": "3.4.4",
-    "metadata-scraper": "^0.2.61"
+    "metadata-scraper": "^0.2.61",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.523.0",
