--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   # Start Common Services
   mysql:
@@ -40,3 +39,27 @@ services:
       retries: 30
     ports:
       - '9090:9090'
+
+  # Note: This is not the collector we use in Prod (which is AWS X-Ray), but
+  # works for local testing.
+  #
+  # To tail these logs (to see trace details), run:
+  # docker compose logs -f otlpcollector
+  #
+  # You may want to change line 56 below from 'error' to 'debug' for more data.
+  otlpcollector:
+    image: otel/opentelemetry-collector-contrib
+    command:
+      [
+        '--config',
+        '/etc/otelcol-contrib/config.yaml',
+        '--set=service.telemetry.logs.level=error',
+      ]
+    # If we want to set a custom config we would do it by mounting the file below.
+    # volumes:
+    #   - ./otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
+    ports:
+      # these are the defaults - we probably only need the gRPC?
+      # but this is all local anyway so, it's fine
+      - 4317:4317 # OTLP gRPC receiver
+      - 4318:4318 # OTLP http receiver
