--- a/servers/collection-api/package.json
+++ b/servers/collection-api/package.json
@@ -29,15 +29,15 @@
     "@aws-sdk/client-eventbridge": "3.529.1",
     "@aws-sdk/client-s3": "3.529.1",
     "@aws-sdk/lib-storage": "3.529.1",
-    "@pocket-tools/apollo-utils": "3.4.2",
-    "@pocket-tools/ts-logger": "^1.3.0",
-    "@prisma/client": "^5.0.0",
-    "@sentry/node": "7.110.1",
-    "@sentry/tracing": "7.110.1",
+    "@pocket-tools/apollo-utils": "3.5.0",
+    "@pocket-tools/ts-logger": "^1.6.0",
+    "@prisma/client": "5.13.0",
+    "@sentry/node": "7.112.2",
+    "@sentry/tracing": "7.112.2",
     "cors": "2.8.5",
     "content-common": "workspace:*",
     "dataloader": "^2.2.2",
-    "express": "4.18.2",
+    "express": "4.19.2",
     "graphql-tag": "2.12.6",
     "graphql-upload": "15.0.2",
     "slugify": "1.6.6",
@@ -59,7 +59,7 @@
     "jest": "29.7.0",
     "nock": "13.5.1",
     "nodemon": "3.0.1",
-    "prisma": "^5.0.0",
+    "prisma": "5.13.0",
     "sinon": "^15.0.1",
     "supertest": "6.3.4",
     "ts-jest": "29.1.2"
