--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -32,17 +32,18 @@
     "@aws-sdk/client-s3": "3.529.1",
     "@aws-sdk/lib-storage": "3.529.1",
     "@devoxa/prisma-relay-cursor-connection": "3.1.0",
-    "@pocket-tools/apollo-utils": "3.4.2",
-    "@pocket-tools/ts-logger": "^1.3.0",
-    "@prisma/client": "^5.0.0",
-    "@sentry/node": "7.110.1",
-    "@sentry/tracing": "7.110.1",
+    "@pocket-tools/apollo-utils": "3.5.0",
+    "@pocket-tools/tracing": "1.1.2",
+    "@pocket-tools/ts-logger": "^1.6.0",
+    "@prisma/client": "5.13.0",
+    "@sentry/node": "7.112.2",
+    "@sentry/tracing": "7.112.2",
     "@snowplow/node-tracker": "3.5.0",
     "content-common": "workspace:*",
     "cors": "2.8.5",
     "dataloader": "^2.2.2",
     "date-fns": "2.29.3",
-    "express": "4.18.2",
+    "express": "4.19.2",
     "graphql-scalars": "1.22.4",
     "graphql-upload": "15.0.2",
     "luxon": "3.4.4",
@@ -60,7 +61,7 @@
     "jest": "29.7.0",
     "nock": "13.5.1",
     "nodemon": "3.0.1",
-    "prisma": "^5.0.0",
+    "prisma": "5.13.0",
     "supertest": "6.3.4",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*"
