adding circleCI config

--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -19,6 +19,7 @@ repo_for_enum: &repo_for_enum
       - curated_corpus_api
       - collection_api
       - corpus_scheduler_lambda
+      - prospect_translation_lambda
 
 resource_class_enum: &resource_class_enum
   resource-class:
@@ -40,6 +41,9 @@ parameters:
     type: boolean
     default: false
   corpus_scheduler_lambda:
+    type: boolean
+    default: false
+  prospect_translation_lambda:
     type: boolean
     default: false
 
@@ -67,6 +71,7 @@ commands:
             curated_corpus_api: << pipeline.parameters.curated_corpus_api >>
             collection_api: << pipeline.parameters.collection_api >>
             corpus_scheduler_lambda: << pipeline.parameters.corpus_scheduler_lambda >>
+            prospect_translation_lambda: << pipeline.parameters.prospect_translation_lambda >>
   install_pnpm:
     steps:
       - run:
