chore: refactor prospect translation lambda infrastructure, circleCI (#159)
* adding infrastructure-common package & translation-lambda infra

* use dynamodb from infrastructure common package

* adding circleCI config

--- a/infrastructure/prospect-translation-lambda/package.json
+++ b/infrastructure/prospect-translation-lambda/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prospect-api-cdk",
+  "name": "prospect-translation-lambda-cdk",
   "version": "1.0.0",
   "main": "dist/main.js",
   "types": "dist/main.ts",
@@ -15,8 +15,7 @@
     "format": "eslint --fix \"src/**/*.ts\""
   },
   "dependencies": {
-    "@pocket-tools/terraform-modules": "5.8.6",
-    "infrastructure-common": "workspace:*"
+    "@pocket-tools/terraform-modules": "5.8.6"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
