--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -73,16 +73,54 @@ commands:
             corpus_scheduler_lambda: << pipeline.parameters.corpus_scheduler_lambda >>
             prospect_translation_lambda: << pipeline.parameters.prospect_translation_lambda >>
   install_pnpm:
+    parameters:
+      scope:
+        description: The pnpm recognized name of the service. Used to scope the packages installed to only that service.
+        type: string
+        default: ""
     steps:
       - run:
           name: Install pnpm package manager
           command: |
             sudo corepack enable
             sudo corepack prepare pnpm@8.15.3 --activate
-      - run:
-          name: Install Dependencies
-          command: |
-            pnpm install
+            pnpm config set store-dir .pnpm-store
+      # if a scope was passed to this command (e.g. "curated-corpus-api"), then only the packages in that scope
+      # will be installed. this is beneficial to CI build/run times.
+      - when:
+          condition: <<parameters.scope>>
+          steps:
+            - restore_cache:
+                name: Restore pnpm Package Cache
+                keys:
+                  - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}-{{ <<parameters.scope >> }}
+            - run:
+                name: Install Dependencies
+                # Need to set peer-deps to false for pnpmv8 https://github.com/pnpm/pnpm/issues/6300
+                command: |
+                  pnpm install --filter=<< parameters.scope >>... --config.dedupe-peer-dependents=false
+            - save_cache:
+                name: Save pnpm Package Cache
+                key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}-{{ <<parameters.scope>> }}
+                paths:
+                  - .pnpm-store
+      # if no scope was passed, we install all dependencies
+      - unless:
+          condition: <<parameters.scope>>
+          steps:
+            - restore_cache:
+                name: Restore pnpm Package Cache
+                keys:
+                  - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+            - run:
+                name: Install Dependencies
+                command: |
+                  pnpm install
+            - save_cache:
+                name: Save pnpm Package Cache
+                key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+                paths:
+                  - .pnpm-store
   generate_prisma_client:
     steps:
       - run:
@@ -451,7 +489,8 @@ jobs:
           password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
-      - install_pnpm
+      - install_pnpm:
+          scope: << parameters.scope >>
       - when:
           condition:
             equal: [ true, << parameters.run_prisma_jobs >> ]
@@ -586,7 +625,8 @@ jobs:
           command: |
             echo "export SENTRY_AUTH_TOKEN="$SENTRY_BEARER"" >> "$BASH_ENV"
       - checkout
-      - install_pnpm
+      - install_pnpm:
+          scope: << parameters.scope >>
       - run:
           # Theres a really annoying bug in PNPM deploy command that will try and create a folder at /home/pruned which we are not allowed to do,
           # so we move it under 1 directory to let it do its thing.
@@ -695,6 +735,9 @@ jobs:
         description: 'build command to use if we need to'
         type: string
         default: ""
+      scope:
+        description: The pnpm recognized name of the service. Used to scope the packages installed to only that service.
+        type: string
 
     docker:
       - image: *node_image
@@ -715,7 +758,8 @@ jobs:
       - when:
           condition: << parameters.build_command >>
           steps:
-            - install_pnpm
+            - install_pnpm:
+                scope: << parameters.scope >>
             - run:
                 name: build schema
                 command: |
