--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -22,18 +22,20 @@
     "jwk-to-pem": "^2.0.5",
     "luxon": "3.4.4",
     "node-fetch": "^2.6.7",
-    "typia": "^5.4.0"
+    "typia": "^6.0.3"
   },
   "devDependencies": {
     "@aws-sdk/client-secrets-manager": "3.529.1",
     "@types/aws-lambda": "8.10.134",
     "@types/luxon": "3.4.2",
     "@types/jest": "29.5.12",
+    "@types/node-fetch": "^2.6.7",
     "aws-sdk-client-mock": "^3.0.1",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
     "msw": "2.1.2",
     "ts-jest": "29.1.2",
+    "ts-patch": "^3.1.2",
     "tsconfig": "workspace:*"
   },
   "files": [
