--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -90,10 +90,16 @@ commands:
       - when:
           condition: <<parameters.scope>>
           steps:
+            # cache key cannot contain a "-" character, so we create an env var with that replaced
+            - run:
+                name: "Preprocess SCOPE"
+                command: |
+                  echo "export SAFE_SCOPE=$(echo << parameters.scope >> | tr '-' 'S')" >> ~/.bashrc
+                shell: /bin/bash -eo pipefail
             - restore_cache:
                 name: Restore pnpm Package Cache
                 keys:
-                  - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}-{{ <<parameters.scope >> }}
+                  - pnpm-packages-{{ .Environment.SAFE_SCOPE }}-{{ checksum "pnpm-lock.yaml" }}
             - run:
                 name: Install Dependencies
                 # Need to set peer-deps to false for pnpmv8 https://github.com/pnpm/pnpm/issues/6300
@@ -101,7 +107,7 @@ commands:
                   pnpm install --filter=<< parameters.scope >>... --config.dedupe-peer-dependents=false
             - save_cache:
                 name: Save pnpm Package Cache
-                key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}-{{ <<parameters.scope>> }}
+                key: pnpm-packages-{{ .Environment.SAFE_SCOPE }}-{{ checksum "pnpm-lock.yaml" }}
                 paths:
                   - .pnpm-store
       # if no scope was passed, we install all dependencies
