--- a/servers/prospect-api/package.json
+++ b/servers/prospect-api/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-eventbridge": "3.529.1",
     "@aws-sdk/lib-dynamodb": "3.529.1",
     "@pocket-tools/apollo-utils": "3.5.0",
+    "@pocket-tools/tracing": "1.1.2",
     "@pocket-tools/ts-logger": "^1.6.0",
     "content-common": "workspace:*",
     "prospectapi-common": "workspace:*",
