--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -33,6 +33,7 @@
     "@aws-sdk/lib-storage": "3.529.1",
     "@devoxa/prisma-relay-cursor-connection": "3.1.0",
     "@pocket-tools/apollo-utils": "3.5.0",
+    "@pocket-tools/tracing": "1.3.15",
     "@pocket-tools/ts-logger": "^1.6.0",
     "@prisma/client": "5.13.0",
     "@sentry/node": "7.112.2",
