updated pnpm to v9, copied pocket Dockerfile

--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
       "dependsOn": ["^build"]
     },
     "test-integrations": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "cache": false
     },
     "synth": {
       "dependsOn": ["^build"],
