--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -5,8 +5,6 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "build-schema-admin": "node dist/admin/buildSchema.js",
-    "build-schema-public": "node dist/public/buildSchema.js",
     "watch": "tsc -w & nodemon",
     "start": "npm run db:generate-prisma-client && npm run migrate:prisma-deploy && node dist/main.js",
     "dev": "npm run migrate:prisma-deploy && npm run build && npm run watch",
@@ -60,6 +58,7 @@
     "@types/graphql-upload": "8.0.12",
     "@types/jest": "29.5.12",
     "@types/node": "^20.12.7",
+    "dotenv": "16.4.5",
     "eslint-config-custom": "workspace:*",
     "form-data": "4.0.0",
     "jest": "29.7.0",
