--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@types/node": "^20.16",
-    "ts-node": "^10.9.2",
-    "tslib": "2.6.2",
-    "typescript": "5.3.3",
-    "tsup": "8.0.1"
+    "ts-node": "10.9.2",
+    "tslib": "2.6.3",
+    "tsup": "8.2.4",
+    "typescript": "5.5.4"
   },
   "engines": {
     "node": "^20.16"
