--- a/servers/curated-corpus-api/.env.ci
+++ b/servers/curated-corpus-api/.env.ci
@@ -1,6 +1,4 @@
+# this is needed for running tests in CI
+# the prisma client needs this value available for the pretest-integrations npm script
+# in order to run `prisma migrate reset`
 DATABASE_URL=mysql://root:@localhost:3306/curation_corpus
-DATABASE_NAME=curation_corpus
-DATABASE_USER=root
-DATABASE_PASSWORD=
-DATABASE_HOST=localhost
-DATABASE_PORT=3306
