--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -6,21 +6,21 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "watch": "tsc -w & nodemon",
-    "start": "npm run db:generate-prisma-client && npm run migrate:prisma-deploy && node dist/main.js",
+    "start": "npm run migrate:prisma-deploy && node dist/main.js",
     "dev": "npm run migrate:prisma-deploy && npm run build && npm run watch",
     "test": "jest \"\\.spec\\.ts\"",
     "test-ci": "npm test",
     "test:watch": "npm test -- --watchAll",
     "test-setup": "export $(egrep -v '^#' .docker/local.env | xargs -0) && ./.circleci/scripts/setup.sh --hosts",
-    "test-integrations": "jest \"\\.integration\\.ts\" --runInBand",
+    "test-integrations": "dotenv -e .env.ci -- jest \"\\.integration\\.ts\" --runInBand",
     "test-integrations:watch": "npm run test-integrations -- --watchAll",
     "lint": "eslint --fix-dry-run \"src/**/*.ts\"",
-    "db:generate-prisma-client": "prisma generate",
     "db:prisma-seed": "npx prisma migrate reset --force && ts-node --emit=false prisma/seed.ts",
     "migrate:prisma-dev": "prisma migrate dev",
     "migrate:prisma-deploy": "prisma migrate deploy",
     "migrate:prisma-reset": "prisma migrate reset --skip-seed --force",
     "prebuild": "dotenv -e .env.ci -- prisma generate",
+    "prestart": "prisma generate",
     "pretest": "dotenv -e .env.ci -- prisma generate",
     "pretest-integrations": "dotenv -e .env.ci -- prisma migrate reset --skip-seed --force"
   },
@@ -66,7 +66,7 @@
     "nodemon": "3.0.1",
     "prisma": "5.13.0",
     "supertest": "6.3.4",
-    "ts-jest": "29.1.2",
+    "ts-jest": "29.2.4",
     "tsconfig": "workspace:*"
   },
   "files": [
