--- a/.github/workflows/curated-corpus-api.yml
+++ b/.github/workflows/curated-corpus-api.yml
@@ -37,6 +37,7 @@ jobs:
       schema-file-path: servers/curated-corpus-api/schema-public.graphql
       prod-graph-url: https://curated-corpus-api.readitlater.com
       dev-graph-url: https://curated-corpus-api.getpocket.dev
+      scope: curated-corpus-api
     secrets:
       apollo-key: ${{ secrets.APOLLO_CLIENT_API_KEY }}
 
@@ -46,9 +47,10 @@ jobs:
     with:
       federated-graph-name: pocket-admin-api
       graph-name: curated-corpus
-      schema-file-path: servers/curated-corpus-api/schema-admin.graphql
+      schema-file-path: servers/curated-corpus-api/schema-admin-api.graphql
       prod-graph-url: https://curated-corpus-api.readitlater.com
       dev-graph-url: https://curated-corpus-api.getpocket.dev
+      scope: curated-corpus-api
     secrets:
       apollo-key: ${{ secrets.APOLLO_ADMIN_API_KEY }}
 
