--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^20.16",
-    "ts-node": "10.9.2",
+    "ts-node": "^10.9.2",
     "tslib": "2.6.3",
     "tsup": "8.2.4",
     "typescript": "5.5.4"
