--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -36,7 +36,8 @@
     "msw": "2.1.2",
     "ts-jest": "29.2.4",
     "ts-patch": "^3.1.2",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "5.3.3"
   },
   "files": [
     "dist",
