move prospect-translation-lambda to GHA
- watch for changes to docker-compose.yml in API GHA workflows

--- a/.github/workflows/collection-api.yml
+++ b/.github/workflows/collection-api.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - 'infrastructure/collection-api/**'
       - 'packages/**'
+      - 'docker-compose.yml'
       - 'servers/collection-api/**'
       - 'pnpm-lock.yaml'
       - 'Dockerfile'
