--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: Generate List of Configs to Merge
           command: |
             # Generate a list of all the circleci configs we want to run
-            file_list=(".circleci/shared.yml" ".circleci/monorepo-jobs.yml" ".circleci/corpus-scheduler-lambda.yml")
+            file_list=(".circleci/shared.yml" ".circleci/monorepo-jobs.yml")
             touch /tmp/configs.txt
 
             # Add file header to each file and dump it to the config list
@@ -46,7 +46,6 @@ jobs:
           output-path: /tmp/pipeline-parameters.json
           mapping: |
             ((lambdas)/prospect-api/.*)|(packages/.*)|(pnpm-lock\.yaml)|(Dockerfile) prospect_api true
-            ((lambdas|infrastructure)/corpus-scheduler-lambda/.*)|(packages/.*)|(pnpm-lock\.yaml) corpus_scheduler_lambda true
       - continuation/continue:
           configuration_path: /tmp/generated-config.yml
           parameters: /tmp/pipeline-parameters.json
