--- a/.github/workflows/corpus-scheduler-lambda.yml
+++ b/.github/workflows/corpus-scheduler-lambda.yml
@@ -19,6 +19,14 @@ on:
       - 'pnpm-lock.yaml'
       - '.github/workflows/corpus-scheduler-lambda.yml'
 jobs:
+  test-integrations:
+    if: github.event_name == 'pull_request'
+    # this will reference the file below on the main branch
+    uses: pocket/pocket-monorepo/.github/workflows/reuse-test-integrations.yml@main
+    with:
+      scope: corpus-scheduler-aws_lambda
+    secrets: inherit
+
   infrastructure:
     # this will reference the file below on the main branch
     uses: pocket/pocket-monorepo/.github/workflows/reuse-infrastructure.yml@main
