--- a/.github/workflows/prospect-api.yml
+++ b/.github/workflows/prospect-api.yml
@@ -6,6 +6,7 @@ on:
       - 'packages/**'
       - 'docker-compose.yml'
       - 'servers/prospect-api/**'
+      - 'lambdas/prospect-api-bridge-lambda/**'
       - 'pnpm-lock.yaml'
       - 'Dockerfile'
       - '.github/workflows/prospect-api.yml'
@@ -17,6 +18,7 @@ on:
       - 'infrastructure/prospect-api/**'
       - 'packages/**'
       - 'servers/prospect-api/**'
+      - 'lambdas/prospect-api-bridge-lambda/**'
       - 'pnpm-lock.yaml'
       - 'Dockerfile'
       - '.github/workflows/prospect-api.yml'
@@ -61,6 +63,19 @@ jobs:
       sentry-project: prospect-api
       docker-repo-name-pattern: prospectapi-{0}-app
       terraform-output: ${{needs.infrastructure.outputs.terraform-output}}
+    secrets: inherit
+
+  sqs-lambda:
+    # this will reference the file below on the main branch
+    uses: pocket/pocket-monorepo/.github/workflows/reuse-build-and-push-lambda.yml@main
+    needs: [infrastructure]
+    with:
+      scope: prospect-api-bridge-aws_lambda
+      sentry-project: prospect-api-bridge-lambda
+      s3-bucket-pattern: pocket-prospectapi-{0}-sqs-bridge
+      codedeploy-app-name-pattern: ProspectAPI-{0}-Sqs-Bridge-Lambda
+      codedeploy-group-name-pattern: ProspectAPI-{0}-Sqs-Bridge-Lambda
+      function-name-pattern: ProspectAPI-{0}-Sqs-Bridge-Function
     secrets: inherit
 
   sentry:
