--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,18 @@
 services:
   # Start Common Services
   mysql:
-    image: mysql:8.0
+    image: mysql:8.0.36 # use same version as aws aurora
+    volumes:
+      - ./.docker/mysql/schema:/docker-entrypoint-initdb.d:delegated
+    healthcheck:
+      # We use a command here because a mysqladmin ping will give a false positive before mysql is accepting connections
+      # https://chrisguitarguy.com/2023/03/06/waiting-for-mysql-to-be-ready-in-docker-compose/
+      test: ['CMD', 'mysql', '-u', 'root', '-e', 'USE finished_startup;']
+      interval: 5s
+      timeout: 20s
+      start_period: 60s
+      retries: 30
+    command: --default_authentication_plugin=mysql_native_password --sql-mode="NO_ENGINE_SUBSTITUTION" --character-set-server=UTF8MB3 --collation-server=utf8_unicode_ci
     ports:
       - '3306:3306'
     environment:
@@ -9,7 +20,7 @@ services:
       - TZ=UTC
 
   localstack:
-    image: localstack/localstack:3.1.0@sha256:9d278167f2b7fda866b8bbe2a077a3fcf2e2f704b024fa76211c7c468428f977
+    image: localstack/localstack:3.7.1
     ports:
       - '4566:4566'
     volumes:
@@ -24,13 +35,15 @@ services:
         - CMD
         - bash
         - -c
-        - curl --write-out '%{http_code}' --silent --output /dev/null http://localhost:4566/_localstack/health
+        # Wait for Localstack to have init'd all of our services: https://docs.localstack.cloud/references/init-hooks/
+        - curl --silent --fail /dev/null http://localhost:4566/_localstack/init/ready | jq -e '.completed == true' > /dev/null || exit 1
       interval: 5s
       timeout: 10s
       start_period: 10s
+      retries: 60
 
   snowplow:
-    image: pocket/snowplow-micro:dev
+    image: pocket/snowplow-micro:prod
     healthcheck:
       test: ['CMD', 'bash', '-c', 'curl -sf localhost:9090/micro/all']
       interval: 5s
@@ -39,27 +52,3 @@ services:
       retries: 30
     ports:
       - '9090:9090'
-
-  # Note: This is not the collector we use in Prod (which is AWS X-Ray), but
-  # works for local testing.
-  #
-  # To tail these logs (to see trace details), run:
-  # docker compose logs -f otlpcollector
-  #
-  # You may want to change line 56 below from 'error' to 'debug' for more data.
-  otlpcollector:
-    image: otel/opentelemetry-collector-contrib
-    command:
-      [
-        '--config',
-        '/etc/otelcol-contrib/config.yaml',
-        '--set=service.telemetry.logs.level=error',
-      ]
-    # If we want to set a custom config we would do it by mounting the file below.
-    # volumes:
-    #   - ./otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
-    ports:
-      # there are lots more ports available, but these are the only one's
-      # currently being used
-      - 4317:4317 # OTLP gRPC receiver
-      - 4318:4318 # OTLP http receiver
