--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,5 @@
 packages:
-  # all apps in direct subdirs of apps/
-  - "apps/*"
-  - "servers/*"
-  - "packages/*"
-  - "infrastructure/*"
-  - "lambdas/*"
+  - 'servers/*'
+  - 'packages/*'
+  - 'infrastructure/*'
+  - 'lambdas/*'
