--- a/packages/content-common/package.json
+++ b/packages/content-common/package.json
@@ -26,6 +26,7 @@
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
     "msw": "2.4.7",
+    "node-fetch": "^2.6.7",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*"
   }
