feat: move corpus API pipeline from circleCI to github actions (#212)
* feat: move from circleCI to github actions

- update docker compose - improve readiness checks for mysql & localstack
- fix flaky corpus scheduler lambda snowplow integration tests
- fix flaky prospect API snowplow integration tests
- make content-common/snowplow getEmitter accept errorHandler as a param (to
account for sentry/node and sentry/serverless).

--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": [".env", "**/.env.*local", "packages/tsconfig/**"],
-  "pipeline": {
+  "envMode": "loose",
+  "tasks": {
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
