--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -33,10 +33,11 @@
     "aws-sdk-client-mock": "^3.0.1",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
-    "msw": "2.1.2",
+    "msw": "2.4.7",
     "ts-jest": "29.1.2",
     "ts-patch": "^3.1.2",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "5.3.3"
   },
   "files": [
     "dist",
