--- a/packages/content-common/package.json
+++ b/packages/content-common/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "test": "jest \"\\.spec\\.ts\"",
+    "test-integrations": "jest \"\\.integration\\.ts\" --runInBand",
     "lint": "eslint --fix-dry-run \"*.ts\"",
     "format": "eslint --fix \"**/*.ts\""
   },
@@ -24,7 +25,8 @@
     "@types/jest": "29.5.12",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
-    "msw": "2.1.2",
+    "msw": "2.4.7",
+    "node-fetch": "^2.6.7",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*"
   }
