--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -8,11 +8,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12",
     "ts-node": "^10.9.2",
-    "tslib": "2.6.2",
-    "typescript": "5.3.3",
-    "tsup": "8.0.1"
+    "tslib": "2.6.3",
+    "tsup": "8.2.4",
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": "^20.12"
