--- a/packages/infrastructure-common/package.json
+++ b/packages/infrastructure-common/package.json
@@ -15,7 +15,14 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
-    "@pocket-tools/terraform-modules": "5.8.6"
+    "@pocket-tools/terraform-modules": "5.14.2",
+    "@cdktf/provider-aws": "19.33.0",
+    "@cdktf/provider-local": "10.1.0",
+    "@cdktf/provider-null": "10.0.0",
+    "@cdktf/provider-pagerduty": "13.11.6",
+    "cdktf": "0.20.8",
+    "cdktf-cli": "0.20.8",
+    "constructs": "10.3.0"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
