--- a/packages/prospectapi-common/tsconfig.json
+++ b/packages/prospectapi-common/tsconfig.json
@@ -1,8 +1,20 @@
 {
   "extends": "tsconfig/graphql.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.integration.ts"],
-  "include": ["*.ts"]
+  "include": [
+    "*.ts",
+    "src/client-api-proxy.spec.ts",
+    "src/client-api-proxy.ts",
+    "src/config.ts",
+    "src/dynamodb-client.ts",
+    "src/dynamodb.integration.ts",
+    "src/dynamodb.spec.ts",
+    "src/dynamodb.ts",
+    "src/index.ts",
+    "src/lib.spec.ts",
+    "src/lib.ts"
+  ]
 }
