--- a/packages/content-common/tsconfig.json
+++ b/packages/content-common/tsconfig.json
@@ -4,5 +4,5 @@
     "outDir": "./dist"
   },
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.integration.ts"],
-  "include": ["**/*.ts"]
+  "include": ["src/**/*.ts"]
 }
