--- a/packages/prospectapi-common/package.json
+++ b/packages/prospectapi-common/package.json
@@ -24,12 +24,14 @@
     "@apollo/client": "3.9.5",
     "@aws-sdk/client-dynamodb": "3.529.1",
     "@aws-sdk/lib-dynamodb": "3.529.1",
+    "@aws-sdk/util-dynamodb": "3.529.1",
     "content-common": "workspace:*",
     "@sentry/node": "7.112.2",
     "cross-fetch": "3.1.5",
     "fetch-retry": "5.0.6",
     "graphql-tag": "2.12.6",
-    "tldts": "5.7.87"
+    "tldts": "5.7.87",
+    "tslib": "2.7.0"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
