--- a/servers/collection-api/package.json
+++ b/servers/collection-api/package.json
@@ -38,16 +38,21 @@
     "@pocket-tools/tracing": "1.3.15",
     "@pocket-tools/ts-logger": "^1.6.0",
     "@prisma/client": "5.13.0",
-    "@sentry/node": "7.112.2",
     "@sentry/tracing": "7.112.2",
-    "cors": "2.8.5",
     "content-common": "workspace:*",
     "dataloader": "^2.2.2",
-    "express": "4.19.2",
-    "graphql-tag": "2.12.6",
     "graphql-upload": "15.0.2",
     "slugify": "1.6.6",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "tslib": "2.7.0",
+    "@apollo/server": "4.11.0",
+    "@apollo/subgraph": "2.9.0",
+    "express": "4.19.2",
+    "cors": "2.8.5",
+    "graphql": "16.9.0",
+    "graphql-tag": "2.12.6",
+    "@sentry/node": "7.112.2",
+    "mime-types": "2.1.35"
   },
   "devDependencies": {
     "tsconfig": "workspace:*",
