--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -22,7 +22,8 @@
     "jwk-to-pem": "^2.0.5",
     "luxon": "3.4.4",
     "node-fetch": "^2.6.7",
-    "typia": "^6.0.3"
+    "typia": "^6.0.3",
+    "tslib": "2.7.0"
   },
   "devDependencies": {
     "@aws-sdk/client-secrets-manager": "3.529.1",
