--- a/servers/collection-api/package.json
+++ b/servers/collection-api/package.json
@@ -38,6 +38,7 @@
     "@pocket-tools/tracing": "1.3.15",
     "@pocket-tools/ts-logger": "^1.6.0",
     "@prisma/client": "5.13.0",
+    "prisma": "5.13.0",
     "@sentry/tracing": "7.112.2",
     "content-common": "workspace:*",
     "dataloader": "^2.2.2",
@@ -70,9 +71,9 @@
     "jest": "29.7.0",
     "nock": "13.5.1",
     "nodemon": "3.0.1",
-    "prisma": "5.13.0",
     "sinon": "^15.0.1",
     "supertest": "6.3.4",
-    "ts-jest": "29.1.2"
+    "ts-jest": "29.1.2",
+    "typescript": "5.3.3"
   }
 }
