--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -22,7 +22,6 @@
     "migrate:prisma-deploy": "prisma migrate deploy",
     "migrate:prisma-reset": "prisma migrate reset --skip-seed --force",
     "prebuild": "dotenv -e .env.ci -- prisma generate",
-    "prestart": "prisma generate",
     "pretest": "dotenv -e .env.ci -- prisma generate",
     "pretest-integrations": "dotenv -e .env.ci -- prisma migrate reset --skip-seed --force"
   },
@@ -33,6 +32,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server-plugin-response-cache": "4.1.3",
+    "@apollo/server": "4.11.0",
+    "@apollo/subgraph": "2.9.0",
     "@aws-sdk/client-eventbridge": "3.529.1",
     "@aws-sdk/client-s3": "3.529.1",
     "@aws-sdk/lib-storage": "3.529.1",
@@ -40,26 +41,25 @@
     "@pocket-tools/apollo-utils": "3.5.0",
     "@pocket-tools/ts-logger": "^1.6.0",
     "@prisma/client": "5.13.0",
-    "@sentry/tracing": "7.112.2",
-    "content-common": "workspace:*",
-    "dataloader": "^2.2.2",
-    "date-fns": "2.29.3",
-    "graphql-scalars": "1.22.4",
-    "graphql-upload": "15.0.2",
-    "luxon": "3.4.4",
-    "metadata-scraper": "^0.2.61",
-    "uuid": "9.0.1",
-    "tslib": "2.7.0",
-    "@apollo/server": "4.11.0",
-    "@apollo/subgraph": "2.9.0",
-    "express": "4.19.2",
-    "cors": "2.8.5",
-    "graphql": "16.9.0",
-    "graphql-tag": "2.12.6",
     "@sentry/node": "7.112.2",
+    "@sentry/tracing": "7.112.2",
     "@snowplow/node-tracker": "3.5.0",
     "@snowplow/tracker-core": "3.5.0",
-    "mime-types": "2.1.35"
+    "content-common": "workspace:*",
+    "cors": "2.8.5",
+    "dataloader": "^2.2.2",
+    "date-fns": "2.29.3",
+    "express": "4.19.2",
+    "graphql-scalars": "1.22.4",
+    "graphql-tag": "2.12.6",
+    "graphql-upload": "15.0.2",
+    "graphql": "16.9.0",
+    "luxon": "3.4.4",
+    "metadata-scraper": "^0.2.61",
+    "mime-types": "2.1.35",
+    "prisma": "5.13.0",
+    "tslib": "2.7.0",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.523.0",
@@ -73,7 +73,6 @@
     "jest": "29.7.0",
     "nock": "13.5.1",
     "nodemon": "3.0.1",
-    "prisma": "5.13.0",
     "supertest": "6.3.4",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*",
